<resources>
    <string name="app_name">WhereveRent</string>
    <string name="title_activity_main">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_busqueda_pref">Busqueda Por Preferencias</string>
    <string name="title_activity_busqueda_gps">Busqueda Por Gps</string>
    <string name="title_activity_mis_inmuebles">Mis Inmuebles</string>
    <string name="title_activity_inmueble_detalles">InmuebleDetalles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_add_inmueble">Añadir inmueble</string>
    <string name="title_activity_sub_actividad_gps">SubActividadGps</string>
    <string name="atributo1">Ciudad</string>
    <string name="atributo2">Precio</string>
    <string name="atributo3">Tipo</string>
    <string name="atributo4">Area</string>
    <string name="atributo5">Modo</string>
    <string name="atributo6">Contacto</string>
    <string name="atributo7">Descripcion</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
