<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.cmovil.gr02.whereverent.AgregarInmuebleActivity"
    android:orientation="vertical">
    //Layout para el formulario que agregara nuevos inmuebles
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo1"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/ciudades_spinner">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo2"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/precio_max_edit_text"
            android:inputType="number">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo3"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tipo_spinner">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo4"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/area_spinner">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo5"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/modo_spinner">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo6"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/contacto"
            android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/atributo7"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/descripcion" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="7">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_guardar"
            android:layout_weight="3"
            android:text="Guardar">

        </Button>

    </LinearLayout>


</LinearLayout>
